# NL_To_Automation

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  REVIEW_TODO.md  pyproject.toml
docs/: agent-tool-discovery.md  architecture.md  getting-started.md  validation.md
edge_functions/: README.md
edge_functions/_shared/: base-handler.ts  filter-utils.ts  polling-manager.ts
edge_functions/scheduler-runner/: index.ts
edge_functions/script-executor/: index.ts
edge_functions/webhook-handler/: index.ts
examples/: README.md
examples/automations/: conditional_multi_action.json  polling_health_alert.json  scheduled_daily_digest.json  webhook_slack_notify.json
nl_to_automation/: __init__.py  agent_tools.py  conditions.py  executor.py  llm_tools.py  templates.py  types.py  validation.py
nl_to_automation/interfaces/: __init__.py  database.py  llm_provider.py  notifications.py  tool_registry.py  user_provider.py
schemas/: README.md
schemas/postgres/: 001_create_automations_schema.sql  002_service_integration_tables.sql  003_declarative_actions.sql  004_polling_support.sql  005_webhook_payload_schemas.sql
spec/: agent-prompt.md  declarative-schema.md
tests/: __init__.py  test_conditions.py  test_executor.py  test_templates.py
